--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "aos": "^2.3.4",
+    "i18nano": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.1",
     "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
